--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -54,7 +54,7 @@ jobs:
         id: tf-plan-ecr
         run: |
           terraform init -reconfigure -backend-config="environments/${{github.event.inputs.environment}}/backend.config"
-          terraform plan -target=aws_ecr_repository.prediction_service_ecr_repo -out=ecr_repo.tfplan --var-file="environments/${{github.event.inputs.environment}}/environment.tfvars
+          terraform plan -target=aws_ecr_repository.prediction_service_ecr_repo -out=ecr_repo.tfplan --var-file="environments/${{github.event.inputs.environment}}/environment.tfvars"
       - name: TF apply ECR
         id: tf-apply-ecr
         if: ${{ steps.tf-plan-ecr.outcome }} == 'success'
@@ -86,7 +86,7 @@ jobs:
         id: tf-plan
         run: |
           terraform init -reconfigure -backend-config="environments/${{github.event.inputs.environment}}/backend.config" \
-          && terraform plan --var-file="environments/${{github.event.inputs.environment}}/environment.tfvars
+          && terraform plan --var-file="environments/${{github.event.inputs.environment}}/environment.tfvars"
 
       - name: TF apply
         id: tf-apply
