--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
     paths:
-      - 'environments/stg/**'
-      - '*.tf'
+      - "environments/stg/**"
+      - "*.tf"
   workflow_call:
     inputs:
       environment:
@@ -39,14 +39,15 @@ on:
         description: "Destroy the infra"
         default: false
         type: boolean
-
+      ecr-only:
+        default: false
+        type: boolean
 jobs:
   apply-ecr:
     if: ${{ !fromJson(inputs.destroy) && fromJson(inputs.ecr-only) }}
     runs-on: ubuntu-latest
     outputs:
       ecr_registry_url: ${{ steps.tf-apply-ecr.outputs.ecr_repository_url }}
-    
     steps:
       - name: check out repo
         uses: actions/checkout@v3
@@ -67,7 +68,7 @@ jobs:
         run: |
           terraform apply ecr_repo.tfplan
           echo "ecr_repository_url=$(terraform output -raw ecr_repository_url)" >> $GITHUB_OUTPUT
-  
+
   apply:
     if: ${{ !fromJson(inputs.destroy) && !fromJson(inputs.ecr-only) }}
     runs-on: ubuntu-latest
