add default input to workflow_call

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -12,6 +12,11 @@ on:
         default: false
         type: boolean
         required: false
+      destroy:
+        description: "Destroy the infra"
+        default: false
+        type: boolean  
+        required: false      
     outputs:
       ecr_repository_url:
         description: "ECR repository URL"
